<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

  <android.support.constraint.Guideline
      android:id="@+id/guideline"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_constraintGuide_percent="0.5"
      />
  <TextView
      android:id="@+id/labelPercentage"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginEnd="8dp"
      android:layout_marginStart="8dp"
      android:layout_marginTop="8dp"
      android:clickable="true"
      android:contextClickable="true"
      android:gravity="center_vertical|end"
      android:hapticFeedbackEnabled="true"
      android:longClickable="true"
      android:text="@string/activity_front_title_battery_percentage"
      android:textColor="@color/colorPrimary"
      android:textSize="24sp"
      app:layout_constraintEnd_toStartOf="@+id/guideline"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      />
  <TextView
      android:id="@+id/contentPercentage"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginEnd="8dp"
      android:layout_marginStart="8dp"
      android:clickable="true"
      android:contextClickable="true"
      android:gravity="center_vertical|start"
      android:hapticFeedbackEnabled="true"
      android:longClickable="true"
      app:layout_constraintBaseline_toBaselineOf="@+id/labelPercentage"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="@+id/guideline"
      />
  <TextView
      android:id="@+id/labelHealth"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginEnd="8dp"
      android:layout_marginStart="8dp"
      android:layout_marginTop="8dp"
      android:clickable="true"
      android:contextClickable="true"
      android:gravity="center_vertical|end"
      android:hapticFeedbackEnabled="true"
      android:longClickable="true"
      android:text="@string/activity_front_title_battery_health"
      android:textColor="@color/colorPrimary"
      android:textSize="24sp"
      app:layout_constraintEnd_toStartOf="@+id/guideline"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/labelPercentage"
      />
  <TextView
      android:id="@+id/contentHealth"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginEnd="8dp"
      android:layout_marginStart="8dp"
      android:clickable="true"
      android:contextClickable="true"
      android:gravity="center_vertical|start"
      android:hapticFeedbackEnabled="true"
      android:longClickable="true"
      app:layout_constraintBaseline_toBaselineOf="@+id/labelHealth"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="@+id/guideline"
      />
  <TextView
      android:id="@+id/labelStatus"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginEnd="8dp"
      android:layout_marginStart="8dp"
      android:layout_marginTop="8dp"
      android:clickable="true"
      android:contextClickable="true"
      android:gravity="center_vertical|end"
      android:hapticFeedbackEnabled="true"
      android:longClickable="true"
      android:text="@string/activity_front_title_battery_status"
      android:textColor="@color/colorPrimary"
      android:textSize="24sp"
      app:layout_constraintEnd_toStartOf="@+id/guideline"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/labelHealth"
      />
  <TextView
      android:id="@+id/contentStatus"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginEnd="8dp"
      android:layout_marginStart="8dp"
      android:clickable="true"
      android:contextClickable="true"
      android:gravity="center_vertical|start"
      android:hapticFeedbackEnabled="true"
      android:longClickable="true"
      app:layout_constraintBaseline_toBaselineOf="@+id/labelStatus"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="@+id/guideline"
      />
  <TextView
      android:id="@+id/labelSource"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginEnd="8dp"
      android:layout_marginStart="8dp"
      android:layout_marginTop="8dp"
      android:clickable="true"
      android:contextClickable="true"
      android:gravity="center_vertical|end"
      android:hapticFeedbackEnabled="true"
      android:longClickable="true"
      android:text="@string/activity_front_title_battery_powersource"
      android:textColor="@color/colorPrimary"
      android:textSize="24sp"
      app:layout_constraintEnd_toStartOf="@+id/guideline"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/labelStatus"
      />
  <TextView
      android:id="@+id/contentSource"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginEnd="8dp"
      android:layout_marginStart="8dp"
      android:clickable="true"
      android:contextClickable="true"
      android:gravity="center_vertical|start"
      android:hapticFeedbackEnabled="true"
      android:longClickable="true"
      app:layout_constraintBaseline_toBaselineOf="@+id/labelSource"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="@+id/guideline"
      />
  <TextView
      android:id="@+id/labelVoltage"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginEnd="8dp"
      android:layout_marginStart="8dp"
      android:layout_marginTop="8dp"
      android:clickable="true"
      android:contextClickable="true"
      android:gravity="center_vertical|end"
      android:hapticFeedbackEnabled="true"
      android:longClickable="true"
      android:text="@string/activity_front_title_battery_voltage"
      android:textColor="@color/colorPrimary"
      android:textSize="24sp"
      app:layout_constraintEnd_toStartOf="@+id/guideline"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/labelSource"
      />
  <TextView
      android:id="@+id/contentVoltage"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginEnd="8dp"
      android:layout_marginStart="8dp"
      android:clickable="true"
      android:contextClickable="true"
      android:gravity="center_vertical|start"
      android:hapticFeedbackEnabled="true"
      android:longClickable="true"
      app:layout_constraintBaseline_toBaselineOf="@+id/labelVoltage"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="@+id/guideline"
      />
  <TextView
      android:id="@+id/labelTemperature"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginBottom="8dp"
      android:layout_marginEnd="8dp"
      android:layout_marginStart="8dp"
      android:layout_marginTop="8dp"
      android:clickable="true"
      android:contextClickable="true"
      android:gravity="center_vertical|end"
      android:hapticFeedbackEnabled="true"
      android:longClickable="true"
      android:text="@string/activity_front_title_battery_temperature"
      android:textColor="@color/colorPrimary"
      android:textSize="24sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toStartOf="@+id/guideline"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/labelVoltage"
      />
  <TextView
      android:id="@+id/contentTemperature"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginEnd="8dp"
      android:layout_marginStart="8dp"
      android:clickable="true"
      android:contextClickable="true"
      android:gravity="center_vertical|start"
      android:hapticFeedbackEnabled="true"
      android:longClickable="true"
      app:layout_constraintBaseline_toBaselineOf="@+id/labelTemperature"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="@+id/guideline"
      />
</android.support.constraint.ConstraintLayout>