<?xml version="1.0" encoding="utf-8"?>


<!--https://stackoverflow.com/questions/2407281/custom-view-with-layout-->
<!--http://trickyandroid.com/protip-inflating-layout-for-your-custom-view/-->
<!--https://stackoverflow.com/a/25984466/6942800-->


<com.android.szparag.batterygraph.screens.front.widgets.BatteryStatsDetailsContainer
    android:id="@+id/batteryStatsDetailsContainer"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

  <android.support.constraint.Guideline
      android:id="@+id/guideline"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_constraintGuide_percent="0.5"
      />
  <TextView
      android:id="@+id/headerPercentage"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginEnd="8dp"
      android:layout_marginStart="8dp"
      android:layout_marginTop="8dp"
      android:clickable="true"
      android:contextClickable="true"
      android:gravity="center_vertical|end"
      android:hapticFeedbackEnabled="true"
      android:longClickable="true"
      android:text="@string/activity_front_title_battery_percentage"
      android:textColor="@color/batteryGraphTextColorHeader"
      android:textSize="24sp"
      app:layout_constraintEnd_toStartOf="@+id/guideline"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      />
  <TextView
      android:id="@+id/contentPercentage"
      android:layout_width="0dp"
      android:layout_height="19dp"
      android:layout_marginEnd="8dp"
      android:layout_marginStart="8dp"
      android:clickable="true"
      android:contextClickable="true"
      android:gravity="center_vertical|start"
      android:hapticFeedbackEnabled="true"
      android:longClickable="true"
      android:textColor="@color/batteryGraphTextColorContent"
      app:layout_constraintBaseline_toBaselineOf="@+id/headerPercentage"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="@+id/guideline"
      tools:text="100"
      />
  <TextView
      android:id="@+id/headerHealth"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginEnd="8dp"
      android:layout_marginStart="8dp"
      android:layout_marginTop="8dp"
      android:clickable="true"
      android:contextClickable="true"
      android:gravity="center_vertical|end"
      android:hapticFeedbackEnabled="true"
      android:longClickable="true"
      android:text="@string/activity_front_title_battery_health"
      android:textColor="@color/batteryGraphTextColorHeader"
      android:textSize="24sp"
      app:layout_constraintEnd_toStartOf="@+id/guideline"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/headerPercentage"
      />
  <TextView
      android:id="@+id/contentHealth"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginEnd="8dp"
      android:layout_marginStart="8dp"
      android:clickable="true"
      android:contextClickable="true"
      android:gravity="center_vertical|start"
      android:hapticFeedbackEnabled="true"
      android:longClickable="true"
      android:textColor="@color/batteryGraphTextColorContent"
      app:layout_constraintBaseline_toBaselineOf="@+id/headerHealth"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="@+id/guideline"
      tools:text="super najs"
      />
  <TextView
      android:id="@+id/headerStatus"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginEnd="8dp"
      android:layout_marginStart="8dp"
      android:layout_marginTop="8dp"
      android:clickable="true"
      android:contextClickable="true"
      android:gravity="center_vertical|end"
      android:hapticFeedbackEnabled="true"
      android:longClickable="true"
      android:text="@string/activity_front_title_battery_status"
      android:textColor="@color/batteryGraphTextColorHeader"
      android:textSize="24sp"
      app:layout_constraintEnd_toStartOf="@+id/guideline"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/headerHealth"
      />
  <TextView
      android:id="@+id/contentStatus"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginEnd="8dp"
      android:layout_marginStart="8dp"
      android:clickable="true"
      android:contextClickable="true"
      android:gravity="center_vertical|start"
      android:hapticFeedbackEnabled="true"
      android:longClickable="true"
      android:textColor="@color/batteryGraphTextColorContent"
      app:layout_constraintBaseline_toBaselineOf="@+id/headerStatus"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="@+id/guideline"
      tools:text="asdasd"
      />
  <TextView
      android:id="@+id/headerPowerSource"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginEnd="8dp"
      android:layout_marginStart="8dp"
      android:layout_marginTop="8dp"
      android:clickable="true"
      android:contextClickable="true"
      android:gravity="center_vertical|end"
      android:hapticFeedbackEnabled="true"
      android:longClickable="true"
      android:text="@string/activity_front_title_battery_powersource"
      android:textColor="@color/batteryGraphTextColorHeader"
      android:textSize="24sp"
      app:layout_constraintEnd_toStartOf="@+id/guideline"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/headerStatus"
      />
  <TextView
      android:id="@+id/contentPowerSource"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginEnd="8dp"
      android:layout_marginStart="8dp"
      android:clickable="true"
      android:contextClickable="true"
      android:gravity="center_vertical|start"
      android:hapticFeedbackEnabled="true"
      android:longClickable="true"
      android:textColor="@color/batteryGraphTextColorContent"
      app:layout_constraintBaseline_toBaselineOf="@+id/headerPowerSource"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="@+id/guideline"
      tools:text="asdadwdawd"
      />
  <TextView
      android:id="@+id/headerVoltage"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginEnd="8dp"
      android:layout_marginStart="8dp"
      android:layout_marginTop="8dp"
      android:clickable="true"
      android:contextClickable="true"
      android:gravity="center_vertical|end"
      android:hapticFeedbackEnabled="true"
      android:longClickable="true"
      android:text="@string/activity_front_title_battery_voltage"
      android:textColor="@color/batteryGraphTextColorHeader"
      android:textSize="24sp"
      app:layout_constraintEnd_toStartOf="@+id/guideline"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/headerPowerSource"
      />
  <TextView
      android:id="@+id/contentVoltage"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginEnd="8dp"
      android:layout_marginStart="8dp"
      android:clickable="true"
      android:contextClickable="true"
      android:gravity="center_vertical|start"
      android:hapticFeedbackEnabled="true"
      android:longClickable="true"
      android:textColor="@color/batteryGraphTextColorContent"
      app:layout_constraintBaseline_toBaselineOf="@+id/headerVoltage"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="@+id/guideline"
      tools:text="2.4"
      />
  <TextView
      android:id="@+id/headerTemperature"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginBottom="8dp"
      android:layout_marginEnd="8dp"
      android:layout_marginStart="8dp"
      android:layout_marginTop="8dp"
      android:clickable="true"
      android:contextClickable="true"
      android:gravity="center_vertical|end"
      android:hapticFeedbackEnabled="true"
      android:longClickable="true"
      android:text="@string/activity_front_title_battery_temperature"
      android:textColor="@color/batteryGraphTextColorHeader"
      android:textSize="24sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toStartOf="@+id/guideline"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/headerVoltage"
      />
  <TextView
      android:id="@+id/contentTemperature"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginEnd="8dp"
      android:layout_marginStart="8dp"
      android:clickable="true"
      android:contextClickable="true"
      android:gravity="center_vertical|start"
      android:hapticFeedbackEnabled="true"
      android:longClickable="true"
      android:textColor="@color/batteryGraphTextColorContent"
      app:layout_constraintBaseline_toBaselineOf="@+id/headerTemperature"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="@+id/guideline"
      tools:text="9000"
      />
</com.android.szparag.batterygraph.screens.front.widgets.BatteryStatsDetailsContainer>